adjusted css and html tags to minimize wasted code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,17 +86,8 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
+.benefit-aside {
+    margin-top: 32px;
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -106,19 +97,7 @@ h3 {
     text-align: center;
 }
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
