--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,9 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 800px;
+.hero > img {
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
