--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,48 +8,58 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
-}
-
-.header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.header h1 .seo {
+h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
+h3 {
+    margin-top: 32px;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 p {
     font-size: 16px;
 }
 
+        /*navbar*/
+.header {
+    padding: 20px;
+    background-color: #2a607c;
+}
+
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+}
+
+.header div > ul li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    list-style-type: none;
+    display: inline-block;
+    margin-left: 25px;
+}
+
+.nav-link {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+        /*main image*/
 .hero > img {
     width: 100%;
     margin-bottom: 25px;
@@ -57,50 +67,11 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-    max-height: 200px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-    max-height: 200px;
-}
-
+        /*main body info*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-}
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-aside {
-    margin-top: 32px;
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-aside img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
 }
 
 #seo {
@@ -130,9 +101,39 @@ h3 {
     color: #ffffff;
 }
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.float-left {
+    float: left;
+    margin-right: 25px;
+    max-height: 200px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+    max-height: 200px;
+}
+
+        /*aside info*/
+.benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+.benefit-aside {
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+.benefit-aside img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
 
 .footer {
