--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-
+        /*h1, h2, h3 and paragraph styling*/
 h1 {
     display: inline-block;
     font-size: 48px;
@@ -34,19 +34,7 @@ p {
     font-size: 16px;
 }
 
-        /*navbar*/
-.header {
-    padding: 20px;
-    background-color: #2a607c;
-}
-
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-}
-
-.header div > ul li {
+ul li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     list-style-type: none;
@@ -57,6 +45,18 @@ p {
 .nav-link {
     color: #ffffff;
     text-decoration: none;
+}
+
+        /*navbar*/
+.header {
+    padding: 20px;
+    background-color: #2a607c;
+}
+
+.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
 }
 
         /*main image*/
@@ -126,7 +126,7 @@ p {
 }
 
 .benefit-aside {
-    margin-bottom: 32px;
+    margin-bottom: 20px;
     color: #ffffff;
 }
 
