--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ ul li {
     margin-left: 20px;
 }
 
-#seo {
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -84,7 +84,7 @@ ul li {
     color: #ffffff;
 }
 
-#orm {
+#online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -93,7 +93,7 @@ ul li {
     color: #ffffff;
 }
 
-#smm {
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -127,6 +127,7 @@ ul li {
 }
 
 .benefit-aside {
+    padding: 0 25px 0 25px;
     margin-bottom: 20px;
     color: #ffffff;
 }
@@ -137,6 +138,7 @@ ul li {
     max-width: 150px;
 }
 
+        /*footer*/
 .footer {
     padding: 30px;
     clear: both;
